--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -7,12 +7,26 @@
 
     <include layout="@layout/view_toolbar" />
 
-    <SearchView
-        android:id="@+id/sv_contracts"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:iconifiedByDefault="false"
-        android:queryHint="请输入搜索内容" />
+        android:orientation="horizontal">
+
+        <SearchView
+            android:id="@+id/sv_contracts"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:iconifiedByDefault="false"
+            android:queryHint="请输入搜索内容" />
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:entries="@array/spinner_type" />
+    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_contracts"
